--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,10 @@
+/* Image itself */
+.ie-hero img {
+  display: block;
+  width: 100%;
+  height: auto;
 
-
+}
 
 .ie-hero {
   margin: 1.2rem 0 1.2rem;
