--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -1,7 +1,7 @@
 
 
 <div style="text-align:center; font-size:0.85em; padding:0.75rem; opacity:0.8;">
-  Reader served:
+  This many people visited www.islam-education.com:
   <strong id="gc-visits">loading…</strong>
 </div>
 
